<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/header"
        android:textColor="#5D07F6"
        android:textSize="24sp"
        android:textStyle="bold"
      android:layout_marginTop="40dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/header_title"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/red_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/red"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#FF5733"
        app:cornerRadius="40dp"
        />

    <Button
        android:id="@+id/yellow_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/red_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#C9DA21"
        android:text="@string/yellow"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/gr_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/yellow_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#4CAF50"
        android:text="@string/green"
        android:textColor="#FFFFFF" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gr_btn"
        android:layout_marginTop="20dp"
        android:background="#E6E2E2">

        <TableRow android:background="#009688">

            <TextView
                android:layout_marginStart="40dp"
                android:text="@string/col1"
                android:textColor="#000000"

                android:textSize="20sp" />

            <TextView

                android:layout_marginStart="40dp"
                android:text="@string/col2"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginStart="40dp"
                android:text="@string/D9"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/d9_info"
                android:layout_marginStart="40dp"
                android:text="@string/status1"
                android:textColor="#FF4CAF50"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginStart="40dp"
                android:text="@string/C7"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/c7_info"
                android:layout_marginStart="40dp"
                android:text="@string/status1"
                android:textColor="#FF4CAF50"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginStart="40dp"
                android:text="@string/D3"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/d3_info"
                android:layout_marginStart="40dp"
                android:text="@string/status1"
                android:textColor="#FF4CAF50"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</RelativeLayout>